--- a/AngularJS/00 - Ejercicios/Tarea 1.1. CONFORME/css/tareas.css
+++ b/AngularJS/00 - Ejercicios/Tarea 1.1. CONFORME/css/tareas.css
@@ -81,10 +81,7 @@ html {
   }
 */
  @media only screen and (max-width: 560px) {
-    #thFecha, .tdFecha {
-        display: none;
-    }
-    #thEstado, .tdEstado {
+    #thFecha, .tdFecha, #thEstado, .tdEstado {
         display: none;
     }
     html {
