--- a/AngularJS/00 - Ejercicios/Tarea 1/css/tareas.css
+++ b/AngularJS/00 - Ejercicios/Tarea 1/css/tareas.css
@@ -72,7 +72,7 @@ html {
     } */
   }
 @media only screen and (max-width: 560px) {
-     #thFecha, .tdFecha {
+     #thFecha, .tdFecha, #thEstado, .tdEstado {
         display: none;
     } 
   }
