--- a/AngularJS/00 - Ejercicios/Tarea 1.1. CONFORME/css/tareas.css
+++ b/AngularJS/00 - Ejercicios/Tarea 1.1. CONFORME/css/tareas.css
@@ -5,19 +5,17 @@ html {
     }
 
 /* Estilos de los divs Padres */
-#divContenedor{
+/* #divContenedor{
     margin: 1% 1% 0 1%;
-}
+} */
 #divEditar {
     float: left;
-    border-radius: 20px;
     border: 2px solid #000000;
     background-color: moccasin;
 }
 #divListaTareas {
     float: right;
-    border-radius: 0px 0px 20px 20px;
-    border: 2px solid #000000;
+    border: 1px solid #000000;
     padding-bottom: 15px;
     background-color: #343a40;
 }
@@ -31,7 +29,6 @@ html {
 .inputAutor { width: 50%; }
 .inputDescripcion { width: 80%; }
 .inputFecha { width: 180px; }
-
 
 .divFecha { display: -webkit-box; }
 .divChk { margin-left: 10%; }
@@ -55,13 +52,13 @@ html {
     vertical-align: middle;
 }
 
-.col-lg-1, .col-lg-2, .col-lg-3,
+/* .col-lg-1, .col-lg-2, .col-lg-3,
 .col-lg-4, .col-lg-5, .col-lg-6,
 .col-lg-7, .col-lg-7, .col-lg-8,
 .col-lg-9, .col-lg-10 {
     padding-left: 0px;
     padding-right: 0px;
-}
+} */
 
 /* El responsive bb */
  /* @media only screen and (max-width: 920px) { */
@@ -80,14 +77,14 @@ html {
     }
   }
 */
- @media only screen and (max-width: 560px) {
+/*  @media only screen and (max-width: 560px) {
     #thFecha, .tdFecha, #thEstado, .tdEstado {
         display: none;
     }
     html {
         background: url('../img/back2v2.jpg') no-repeat center center fixed;
     }
-  }
+  } */
 
   @media only screen and (max-width: 700px) {
     /* Trucos */
@@ -107,11 +104,11 @@ html {
 }
 
 /* FULLERIA */
-@media (min-width: 992px) {
+/* @media (min-width: 992px) {
     .col-lg-6 {
         max-width: 56%;
     }
-}
+} */
 @media (max-width: 991px) {
     #divListaTareas {
         margin-top: 2%;
